Fix issue where images were not rendering in collapsed view

--- a/frontend/src/components/lumi_doc/renderers/section_renderer.scss
+++ b/frontend/src/components/lumi_doc/renderers/section_renderer.scss
@@ -111,6 +111,11 @@
     grid-column: common.$content-grid-col;
   }
 
+  .figures {
+    max-width: 100%;
+    overflow: auto;
+  }
+
   .content-viz {
     grid-column: 2 / 4;
 
